--- a/experiment/index.html
+++ b/experiment/index.html
@@ -19,6 +19,7 @@
         <script src="https://unpkg.com/@jspsych/plugin-preload"></script>
         <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response"></script>
         <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-multi-select"></script>
         <script src="https://realitybending.github.io/JSmisc/jspsych_extensions/plugin-multiple-slider.js"></script>
         <script src="stimuli_selection/stimuli_list.js"></script>
         <script src="instructions.js"></script>
@@ -33,15 +34,6 @@
             /* set canvas to be full screen */
             .jspsych-content {
                 max-width: 100%;
-            }
-
-            /*Hide scrollbar while keeping it functional */
-            body {
-                overflow-y: scroll;
-            }
-
-            Body::-webkit-scrollbar {
-                display: none;
             }
         </style>
     </head>
@@ -67,14 +59,18 @@
         })
 
         // Demographics ========================================================
-        // timeline.push(demographics_consent)
-        // timeline.push(demographics_browser_info)
-        // timeline.push(demographics_info)
+        timeline.push(demographics_consent)
+        timeline.push(demographics_browser_info)
+        timeline.push(demographics_info)
 
         // Fiction =============================================================
         timeline.push(fiction_preloadstims)
         timeline.push(fiction_instructions1)
         timeline.push(fiction_trials)
+
+        timeline.push(fiction_instructions2)
+        timeline.push(fiction_trials_realness)
+        timeline.push(fiction_debriefing)
 
         // End =================================================================
         // Exit fullscreen mode
