--- a/experiment/english1.html
+++ b/experiment/english1.html
@@ -40,6 +40,9 @@
             .jspsych-content {
                 max-width: 100%;
             }
+            .narrow-text {
+                max-width: 50%;
+            }
         </style>
     </head>
 
@@ -50,36 +53,33 @@
         var timeline = []
 
         var jsPsych = initJsPsych({
-            on_finish: function () {
-                jsPsych.data.addProperties({
-                    experimenter: "Experimenter1_English",
-                })
-                // Display data in browser (useful for debugging)
-                // jsPsych.data.displayData("json")
-            },
-        })
-
-        // Enter fullscreen mode
-        timeline.push({
-            type: jsPsychFullscreen,
-            fullscreen_mode: true,
-            delay_after: 0,
+            // on_finish: function () {
+            //     jsPsych.data.displayData("json") // Display data in browser
+            // },
         })
 
         // Demographics ========================================================
-        timeline.push(demographics_consent)
+        timeline.push(
+            demographics_consent((experimenter = "Experimenter1_English"))
+        )
+        timeline.push(fullscreen_on) // Enter fullscreen mode
         timeline.push(demographics_browser_info)
+
         timeline.push(demographics_info)
-
-        // Questionnaire =======================================================
+        timeline.push(demographics_hormones)
         timeline.push(demographics_ai)
-        timeline.push(questionnaire_bait)
 
-        // Fiction =============================================================
+        // Fiction (part 1) ====================================================
         timeline.push(fiction_preloadstims)
         timeline.push(fiction_instructions1)
         timeline.push(fiction_trials)
 
+        // Questionnaire =======================================================
+        timeline.push(instructions_questionnaires)
+        timeline.push(questionnaire_bait)
+        timeline.push(questionnaire_cops)
+
+        // Fiction (part 2) ====================================================
         timeline.push(fiction_instructions2)
         timeline.push(fiction_trials_realness)
         timeline.push(fiction_debriefing)
@@ -98,10 +98,7 @@
         })
 
         // Exit fullscreen mode
-        timeline.push({
-            type: jsPsychFullscreen,
-            fullscreen_mode: false,
-        })
+        timeline.push(fullscreen_off)
 
         timeline.push(
             demographics_endscreen(
