add sexual orientation

--- a/experiment/english1.html
+++ b/experiment/english1.html
@@ -67,7 +67,7 @@
 
         timeline.push(demographics_info)
         timeline.push(demographics_hormones)
-        timeline.push(demographics_ai)
+        timeline.push(demographics_other)
 
         // Fiction (part 1) ====================================================
         timeline.push(fiction_preloadstims)
