move more instructions + add unique screen names

--- a/experiment/english1.html
+++ b/experiment/english1.html
@@ -81,6 +81,7 @@
     timeline.push(fiction_instructions2)
     timeline.push(fiction_trials_realness)
     timeline.push(fiction_debriefing)
+    timeline.push(fiction_feedback)
 
     // End =================================================================
 
