--- a/experiment/english.html
+++ b/experiment/english.html
@@ -50,9 +50,9 @@
         var timeline = []
 
         var jsPsych = initJsPsych({
-            on_finish: function () {
-                jsPsych.data.displayData("json") // Display data in browser
-            },
+            // on_finish: function () {
+            //     jsPsych.data.displayData("json") // Display data in browser
+            // },
         })
 
         // Demographics ========================================================
