add some more bits to translate
@MarcoViola88 I put some new variables to translate at the end of italian.js

--- a/experiment/italian.html
+++ b/experiment/italian.html
@@ -19,7 +19,7 @@
         <!-- Load scripts -->
         <script src="https://realitybending.github.io/JSmisc/jspsych_extensions/plugin-multiple-slider.js"></script>
         <script src="instructions_italian.js"></script>
-        <script src="demographics.js"></script>
+        <script src="demographics2.js"></script>
         <script src="questionnaires.js"></script>
         <!--‘-->
 
@@ -99,7 +99,7 @@
 
         timeline.push(
             demographics_endscreen(
-                "https://realitybending.github.io/FictionEro/experiment/english?exp=snow&lang=en"
+                "https://realitybending.github.io/FictionEro/experiment/italian?exp=snow&lang=it"
             )
         )
 
