--- a/experiment/spanish.html
+++ b/experiment/spanish.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Title shown in tab -->
-        <title>Expérience</title>
+        <title>Experimento</title>
 
         <!-- Load plugins used in Demographics -->
         <script src="https://unpkg.com/jspsych"></script>
