--- a/analysis/3_realness.html
+++ b/analysis/3_realness.html
@@ -91,6 +91,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <li><a href="#porn-usage" id="toc-porn-usage" class="nav-link" data-scroll-target="#porn-usage">Porn Usage</a></li>
   <li><a href="#feedback" id="toc-feedback" class="nav-link" data-scroll-target="#feedback">Feedback</a></li>
   </ul></li>
+  <li><a href="#summary" id="toc-summary" class="nav-link" data-scroll-target="#summary">Summary</a></li>
   <li><a href="#figures" id="toc-figures" class="nav-link" data-scroll-target="#figures">Figures</a></li>
   </ul>
 </nav>
@@ -176,7 +177,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <section id="distribution" class="level3">
 <h3 class="anchored" data-anchor-id="distribution">Distribution</h3>
 <p>Similar to the arousal data, the realness data contains a mixture of responses ranging from extreme values (0 and 1) to intermediate values between 0 and 1. Consequently, an ordered beta model was used for this data, as it is the most suitable for bounded data (e.g., survey sliders).For more information on these models see <a href="https://doi.org/10.1017/pan.2022.20">(Kubinec, 2022)</a>.</p>
-<p>This graph highlights gender differences and similarities in the ratings of realness across different types of images, indicating a consistent tendency to rate images as highly real across both genders, particularity at the upper end of the realness scale. Both genders exhibit a tendency to rate images as more real as the realness rating increases, with a consistent spike at the highest rating of 1.0 across all image types. Males generally show higher counts of high realness ratings compared to females, especially for relevant images.The patterns for irrelevant and non-erotic images are quite similar between genders, with a uniform distribution and a spike at the highest rating.</p>
+<!-- This graph highlights gender differences and similarities in the ratings of realness across different types of images, indicating a consistent tendency to rate images as highly real across both genders, particularity at the upper end of the realness scale. Both genders exhibit a tendency to rate images as more real as the realness rating increases, with a consistent spike at the highest rating of 1.0 across all image types. Males generally show higher counts of high realness ratings compared to females, especially for relevant images.The patterns for irrelevant and non-erotic images are quite similar between genders, with a uniform distribution and a spike at the highest rating. -->
 <div class="cell">
 <details class="code-fold">
 <summary>Code</summary>
@@ -204,7 +205,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="physical-characteristics" class="level2">
 <h2 class="anchored" data-anchor-id="physical-characteristics">Physical Characteristics</h2>
-<p>Here, we are examining the effect of different physical characteristics of the images to evaluate whether they influence the perceived realness of the images. Neither Entropy, Complexity, Contrast, nor Luminance significantly influence the perceived realness of the images, nor the likelihood of realness being above 0.5 (“RealnessBelief”), as indicated by the lack of significant effects.</p>
+<p>Here, we are examining the effect of various physical characteristics of the images to evaluate whether they influence the perceived realness of the images. Neither Entropy, Complexity, Contrast, nor Luminance significantly influence the perceived realness of the images, nor the likelihood of realness being above 0.5 (“RealnessBelief”), as indicated by the lack of significant effects.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Code</summary>
@@ -1294,6 +1295,15 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1</code></pre>
 </div>
 </div>
 </section>
+</section>
+<section id="summary" class="level2">
+<h2 class="anchored" data-anchor-id="summary">Summary</h2>
+<ul>
+<li><p>Findings indicate a consistent perception across both genders that AI-generated images are perceived as less realistic compared to photographs. Interestingly, both genders rated non-erotic images as more realistic than relevant and irrelevant images.</p></li>
+<li><p>As beliefs in AI’s ability to generate realistic images increases, both genders show higher realness scores.</p></li>
+<li><p>Porn usage moderated realness ratings, only for men presented with AI-generated non-erotic images.</p></li>
+<li><p>Males who reported an inability to discriminate AI-generated images perceived both relevant and irrelevant AI-generated images as more real, whereas females who reported this inability showed increased realness ratings only for relevant AI-generated images.</p></li>
+</ul>
 </section>
 <section id="figures" class="level2">
 <h2 class="anchored" data-anchor-id="figures">Figures</h2>
