--- a/experiment/italian.html
+++ b/experiment/italian.html
@@ -5,13 +5,13 @@
         <title>Experiment</title>
 
         <!-- Load plugins used in Demographics -->
-        <script src="https://unpkg.com/jspsych"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-browser-check"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-survey-text"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-survey-multi-choice"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-survey-likert"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-html-button-response"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-fullscreen"></script>
+        <script src="https://unpkg.com/jspsych@7.3.4"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-browser-check@1.0.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-multi-choice@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-likert@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.2.1"></script>
 
         <!-- To save data via DataPipe (for online experiments) -->
         <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe@0.3"></script>
@@ -21,13 +21,12 @@
         <script src="instructions_italian.js"></script>
         <script src="demographics.js"></script>
         <script src="questionnaires.js"></script>
-        <!--‘-->
 
         <!-- Load task -->
-        <script src="https://unpkg.com/@jspsych/plugin-preload"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-survey-multi-select"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-multi-select@1.1.3"></script>
         <script src="stimuli_selection/stimuli_list.js"></script>
         <script src="fiction.js"></script>
 
