--- a/study2/experiment/index.html
+++ b/study2/experiment/index.html
@@ -1,119 +1,124 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <!-- Title shown in tab -->
+        <title>Experiment</title>
 
-<head>
-    <!-- Title shown in tab -->
-    <title>Experiment</title>
+        <!-- Load JsPsych -->
+        <script src="https://unpkg.com/jspsych@7.3.1"></script>
+        <link
+            href="https://unpkg.com/jspsych@7.3.1/css/jspsych.css"
+            rel="stylesheet"
+            type="text/css"
+        />
 
-    <!-- Load JsPsych -->
-    <script src="https://unpkg.com/jspsych@7.3.1"></script>
-    <link href="https://unpkg.com/jspsych@7.3.1/css/jspsych.css" rel="stylesheet" type="text/css" />
+        <!-- Load plugins -->
+        <script src="https://unpkg.com/@jspsych/plugin-browser-check@1.0.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.2.1"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey@1.0.1"></script>
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/@jspsych/plugin-survey@1.0.1/css/survey.css"
+        />
 
-    <!-- Load plugins -->
-    <script src="https://unpkg.com/@jspsych/plugin-browser-check@1.0.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.1.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.2.1"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-survey@1.0.1"></script>
-    <link rel="stylesheet" href="https://unpkg.com/@jspsych/plugin-survey@1.0.1/css/survey.css" />
+        <!-- To save data via DataPipe (for online experiments) -->
+        <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe@0.4.0"></script>
 
-    <!-- To save data via DataPipe (for online experiments) -->
-    <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe@0.4.0"></script>
+        <!-- Eye-tacking -->
+        <script src="https://cdn.jsdelivr.net/gh/jspsych/jspsych@jspsych@7.0.0/examples/js/webgazer/webgazer.js"></script>
+        <script src="https://unpkg.com/@jspsych/extension-webgazer@1.0.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-webgazer-init-camera@1.0.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-webgazer-calibrate@1.0.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-webgazer-validate@1.0.3"></script>
 
-    <!-- Eye-tacking -->
-    <script src="https://cdn.jsdelivr.net/gh/jspsych/jspsych@jspsych@7.0.0/examples/js/webgazer/webgazer.js"></script>
-    <script src="https://unpkg.com/@jspsych/extension-webgazer@1.0.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-webgazer-init-camera@1.0.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-webgazer-calibrate@1.0.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-webgazer-validate@1.0.3"></script>
+        <!-- Plots -->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="https://realitybending.github.io/JSmisc/misc/plots.js"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-canvas-button-response"></script>
 
-    <!-- Plots -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://realitybending.github.io/JSmisc/misc/plots.js"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-canvas-button-response"></script>
+        <!-- Custom scripts -->
+        <script src="stimuli_selection/stimuli_list.js"></script>
+        <script src="demographics.js"></script>
+        <script src="fiction.js"></script>
+        <script src="questionnaires.js"></script>
+        <script src="eye_tracking.js"></script>
 
-    <!-- Custom scripts -->
-    <script src="stimuli_selection/stimuli_list.js"></script>
-    <script src="demographics.js"></script>
-    <script src="fiction.js"></script>
-    <script src="questionnaires.js"></script>
-    <script src="eye_tracking.js"></script>
+        <!-- CSS -->
 
-    <!-- CSS -->
+        <style>
+            .narrow-text {
+                max-width: 50%;
+            }
+        </style>
+    </head>
 
-    <style>
-        .narrow-text {
-            max-width: 50%;
-        }
-    </style>
-</head>
+    <body></body>
 
-<body></body>
+    <script>
+        // Initialize experiment =================================================
+        var jsPsych = initJsPsych({
+            show_progress_bar: true,
+            message_progress_bar: "Progress",
+            on_finish: function () {
+                //     jsPsych.data.displayData("json") // Display data in browser
+                window.location = "https://realitybending.github.io/" // Redirect to lab website
+            },
+            extensions: [{ type: jsPsychExtensionWebgazer }],
+        })
 
-<script>
-    // Initialize experiment =================================================
-    var jsPsych = initJsPsych({
-        show_progress_bar: true,
-        message_progress_bar: "Progress",
-        on_finish: function () {
-            //     jsPsych.data.displayData("json") // Display data in browser
-            window.location = "https://realitybending.github.io/" // Redirect to lab website
-        },
-        extensions: [{ type: jsPsychExtensionWebgazer }],
-    })
+        // Initialize timeline
+        var timeline = []
 
-    // Initialize timeline
-    var timeline = []
+        // Demographics ===========================================================
+        // timeline.push(fullscreen_on) // Enter fullscreen mode
+        // timeline.push(demographics_browser_info)
+        // timeline.push(demographics_consent)
+        timeline.push(demographics_questions)
+        timeline.push(fiction_preloadstims)
 
-    // Demographics ===========================================================
-    // timeline.push(fullscreen_on) // Enter fullscreen mode
-    // timeline.push(demographics_browser_info)
-    // timeline.push(demographics_consent)
-    timeline.push(demographics_questions)
-    timeline.push(fiction_preloadstims)
+        // Questionnaires ===========================================================
+        // timeline.push(questionnaires_instructions0) // Instructions Questionnaires
+        // timeline.push(questionnaire_bait) // Beliefs about AI technonology
+        // timeline.push(feedback_bait) // Attitudes towards AI
 
-    // Questionnaires ===========================================================
-    // timeline.push(questionnaires_instructions0) // Instructions Questionnaires
-    // timeline.push(questionnaire_bait) // Beliefs about AI technonology
-    // timeline.push(feedback_bait) // Attitudes towards AI
+        // Eye-tracking ==============================================================
+        // timeline.push(eyetracking_consent)
+        // timeline.push(eyetracking_calibration)
 
-    // Eye-tracking ==============================================================
-    // timeline.push(eyetracking_consent)
-    // timeline.push(eyetracking_calibration)
+        // Fiction stage 1 ===========================================================
+        timeline.push(fiction_instructions1)
+        timeline.push(fiction_phase1a)
+        timeline.push(fiction_phase1_break)
+        // timeline.push(eyetracking_recalibration)
+        timeline.push(fiction_phase1b)
+        timeline.push(fiction_feedback1)
 
-    // Fiction stage 1 ===========================================================
-    timeline.push(fiction_instructions1)
-    timeline.push(fiction_phase1a)
-    timeline.push(fiction_phase1_break)
-    // timeline.push(eyetracking_recalibration)
-    timeline.push(fiction_phase1b)
-    timeline.push(fiction_feedback1)
+        // // Fiction stage 2 ===========================================================
+        timeline.push(fiction_instructions2)
+        timeline.push(fiction_phase2)
+        timeline.push(experiment_feedback)
 
-    // // Fiction stage 2 ===========================================================
-    timeline.push(fiction_instructions2)
-    timeline.push(fiction_phase2)
-    timeline.push(experiment_feedback)
+        // End =======================================================================
+        timeline.push(demographics_debriefing)
 
-    // End =======================================================================
-    timeline.push(demographics_debriefing)
+        // // Save data via DataPipe
+        // timeline.push({
+        //     type: jsPsychPipe,
+        //     action: "save",
+        //     experiment_id: "nboDkVu5hx3y", // This in generated in the DataPipe interface
+        //     filename: `${jsPsych.randomization.randomID(10)}.csv`,
+        //     data_string: () => jsPsych.data.get().csv(),
+        // })
 
-    // // Save data via DataPipe
-    // timeline.push({
-    //     type: jsPsychPipe,
-    //     action: "save",
-    //     experiment_id: "nboDkVu5hx3y", // This in generated in the DataPipe interface
-    //     filename: `${jsPsych.randomization.randomID(10)}.csv`,
-    //     data_string: () => jsPsych.data.get().csv(),
-    // })
+        // Exit fullscreen mode
+        timeline.push(fullscreen_off)
+        timeline.push(demographics_endscreen)
 
-    // Exit fullscreen mode
-    timeline.push(fullscreen_off)
-    timeline.push(demographics_endscreen)
-
-    // Run the timeline -------------------------------------------------------
-    jsPsych.run(timeline)
-</script>
-
+        // Run the timeline -------------------------------------------------------
+        jsPsych.run(timeline)
+    </script>
 </html>
