--- a/study2/experiment/index.html
+++ b/study2/experiment/index.html
@@ -18,7 +18,7 @@
         <script src="https://unpkg.com/@jspsych/plugin-preload@2.0.0"></script>
         <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@2.0.0"></script>
         <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@2.0.0"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.2.1"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-fullscreen@2.0.0"></script>
         <script src="https://unpkg.com/@jspsych/plugin-survey@2.0.0"></script>
         <link
             rel="stylesheet"
@@ -90,33 +90,65 @@
         // timeline.push(eyetracking_calibration)
 
         // Fiction stage 1 ===========================================================
-        timeline.push(fiction_instructions1)
-        timeline.push(fiction_phase1a)
-        timeline.push(fiction_phase1_break)
-        // timeline.push(eyetracking_recalibration)
-        timeline.push(fiction_phase1b)
-        timeline.push(fiction_feedback1)
+        // timeline.push(fiction_instructions1)
 
-        // // Fiction stage 2 ===========================================================
-        timeline.push(fiction_instructions2)
-        timeline.push(fiction_phase2)
-        timeline.push(experiment_feedback)
+        timeline.push({
+            timeline: [fiction_instructions1],
+            on_finish() {
+                // Phase 1A -------------------------------------------------------------
+                timeline.push({
+                    timeline_variables: stimuli.slice(0, 3),
+                    timeline: [
+                        fiction_fixation1a,
+                        fiction_cue,
+                        fiction_fixation1b,
+                        fiction_showimage1,
+                        // fiction_ratings1,
+                    ],
+                })
+                // Break ----------------------------------------------------------------
+                timeline.push(fiction_phase1_break)
+                // timeline.push(eyetracking_recalibration)
+                // Phase 1B -------------------------------------------------------------
+                timeline.push({
+                    timeline_variables: stimuli
+                        .slice(Math.ceil(stimuli.length / 2), stimuli_list.length)
+                        .slice(0, 3),
+                    timeline: [
+                        fiction_fixation1a,
+                        fiction_cue,
+                        fiction_fixation1b,
+                        fiction_showimage1,
+                        // fiction_ratings1,
+                    ],
+                })
+                timeline.push(fiction_feedback1)
 
-        // End =======================================================================
-        timeline.push(demographics_debriefing)
+                // Stage 2 ==============================================================
+                timeline.push(fiction_instructions2)
+                timeline.push({
+                    timeline_variables: stimuli.slice(0, 3),
+                    timeline: [fiction_fixation2, fiction_showimage2, fiction_ratings2],
+                })
+                timeline.push(experiment_feedback)
 
-        // // Save data via DataPipe
-        // timeline.push({
-        //     type: jsPsychPipe,
-        //     action: "save",
-        //     experiment_id: "nboDkVu5hx3y", // This in generated in the DataPipe interface
-        //     filename: `${jsPsych.randomization.randomID(10)}.csv`,
-        //     data_string: () => jsPsych.data.get().csv(),
-        // })
+                // End ===================================================================
+                timeline.push(demographics_debriefing)
 
-        // Exit fullscreen mode
-        timeline.push(fullscreen_off)
-        timeline.push(demographics_endscreen)
+                // Save data via DataPipe
+                timeline.push({
+                    type: jsPsychPipe,
+                    action: "save",
+                    experiment_id: "nboDkVu5hx3y", // This in generated in the DataPipe interface
+                    filename: `${jsPsych.randomization.randomID(10)}.csv`,
+                    data_string: () => jsPsych.data.get().csv(),
+                })
+
+                // Exit fullscreen mode
+                timeline.push(fullscreen_off)
+                timeline.push(demographics_endscreen)
+            },
+        })
 
         // Run the timeline -------------------------------------------------------
         jsPsych.run(timeline)
