--- a/study1/experiment/english.html
+++ b/study1/experiment/english.html
@@ -69,11 +69,11 @@
     // timeline.push(demographics_browser_info)
     // timeline.push(demographics_consent)
 
-    // timeline.push(demographics_info)
-    // timeline.push(demographics_hormones)
-    // timeline.push(demographics_other)
+    // // timeline.push(demographics_info)
+    // // timeline.push(demographics_hormones)
+    // // timeline.push(demographics_other)
 
-    // // Fiction (part 1) ====================================================
+    // // // Fiction (part 1) ====================================================
     // timeline.push(fiction_preloadstims)
     // timeline.push(fiction_instructions1)
     // timeline.push(fiction_trials)
@@ -81,11 +81,11 @@
     // // Questionnaire =======================================================
     // timeline.push(instructions_questionnaires)
     // timeline.push(questionnaire_bait)
-    // timeline.push(questionnaire_cops)
+    timeline.push(questionnaire_cops)
 
     // Fiction (part 2) ====================================================
     timeline.push(fiction_instructions2)
-    timeline.push(fiction_trials_realness)
+    // timeline.push(fiction_trials_realness)
     timeline.push(fiction_feedback1)
     timeline.push(fiction_feedback2)
 
